--- a/app/client/main.html
+++ b/app/client/main.html
@@ -17,6 +17,52 @@
 </template>
 
 
+<template name="game">
+  {{#with game}}
+  {{setup}}
+  <div class="ui text container stuff">
+  <h2 class="ui inverted header">You are {{whoami}}</h2>
+  <h2 class="ui inverted header">Players: {{players.length}}</h2>
+  {{#if waiting}}
+    {{#if mymove}}
+    <div class="ui message">
+        <p>Make a move!</p>
+    </div>
+    {{else}}
+    <div class="ui message">
+         <p>Waiting for player to make move...</p>
+    </div>
+    {{/if}}
+  {{/if}}
+    <div class="ui relaxed grid container">
+      <div class="eight wide column">
+        <h2 class="ui inverted header left aligned"> Player1 money: {{myMoney}} </h2>
+      </div>
+      <div class="eight wide column">
+        <h2 class="ui inverted header right aligned"> Player2 money: {{enemyMoney}} </h2>
+      </div>
+    </div>
+    <table class="ui inverted celled table">
+      <tbody>
+        <tr><td id="0"></td><td id="1"></td><td id="2"></td></tr>
+        <tr><td id="3"></td><td id="4"></td><td id="5"></td></tr>
+        <tr><td id="6"></td><td id="7"></td><td id="8"></td></tr>
+      </tbody>
+    </table>
+    <div class="ui relaxed grid container">
+      <div class="eight wide column">
+        <h2 class="ui inverted header left aligned"> Player1 bet: {{{myBet}}} </h2>
+      </div>
+      <div class="eight wide column">
+        <h2 class="ui inverted header right aligned"> Player2 bet: {{{enemyBet}}} </h2>
+      </div>
+    </div>
+    <div id="betBtn" class="ui huge primary inverted button" style="margin-top: 1.5em;">Bet</div>
+  </div>
+  {{/with}}
+</template>
+
+
 <template name="menu">
         <div class="ui container">
             <div class="ui large secondary inverted pointing menu">
@@ -89,11 +135,20 @@
           </div>
           <div class="six wide column">
             <div class="content">
-              <a class="header">{{players}} players</a>
+              <a class="header">{{players.length}} players
+              {{#if you}} (you)
+              {{/if}}
+              </a>
             </div>
           </div>
         </div>
       {{/each}}
+      {{#if picSelected}}
+      <div class="stuff">
+          <div id="joinBtn" class="ui huge primary inverted button">Join room</div>
+          <div id="deleteBtn" class="ui huge negative inverted button">Delete room</div>
+      </div>
+      {{/if}}
     </div>
   {{else}}
   <h2 class="ui header inverted">No rooms created yet!</h2>
