--- a/app/client/main.html
+++ b/app/client/main.html
@@ -43,10 +43,10 @@
   {{/if}}
     <div class="ui relaxed grid container">
       <div class="eight wide column">
-        <h2 class="ui inverted header left aligned"> Player1 money: {{myMoney}} </h2>
+        <h2 class="ui inverted header left aligned"> {{myMoney}} </h2>
       </div>
       <div class="eight wide column">
-        <h2 class="ui inverted header right aligned"> Player2 money: {{enemyMoney}} </h2>
+        <h2 class="ui inverted header right aligned"> {{enemyMoney}} </h2>
       </div>
     </div>
     <table class="ui inverted celled table">
